📱Fixed mobile layout issues

--- a/grav/user/themes/annekesinnema/css/styles.css
+++ b/grav/user/themes/annekesinnema/css/styles.css
@@ -79,7 +79,6 @@ h1, h2, h3 {
   line-height: 1.1;
   font-weight: normal;
   margin-top: 0;
-  margin-bottom: 0;
 }
 @media screen and (min-width: 40em) {
   h1, h2, h3 {
@@ -140,23 +139,41 @@ time {
   line-height: 1.3;
 }
 
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+p:empty {
+  margin-bottom: 0;
+}
+
 .form-input-wrapper {
   position: relative;
-  display: flex;
   border-top: 0;
   border-left: 2px solid #F2DAEE;
   border-right: 2px solid #F2DAEE;
   border-bottom: 2px solid #F2DAEE;
+  padding: 0.675rem;
 }
 .form-input-wrapper input {
-  flex: 2 1 0;
-  padding: 0.675rem;
-}
-.form-input-wrapper label {
-  flex: 1 1 10px;
-  padding: 0.675rem;
+  padding: 0;
 }
 
+@media screen and (min-width: 40em) {
+  .form-input-wrapper {
+    display: flex;
+    padding: 0;
+  }
+  .form-input-wrapper input, .form-input-wrapper label, .form-input-wrapper textarea {
+    padding: 0.675rem;
+  }
+  .form-input-wrapper input {
+    flex: 2 1 0;
+  }
+  .form-input-wrapper label {
+    flex: 1 1 10px;
+  }
+}
 input[type=text],
 input[type=search],
 input[type=tel],
@@ -168,8 +185,6 @@ textarea {
   font-size: inherit;
   position: relative;
   resize: none;
-  padding: 0.675rem;
-  height: 2.7rem;
   line-height: 1.35rem;
   box-sizing: border-box;
   font-family: inherit;
@@ -229,17 +244,21 @@ button:focus, .buttonlike:focus, [type=submit]:focus {
   .form-field--checkboxes .form-input-wrapper {
     flex-direction: row;
   }
+  .form-field--checkboxes .form-input-wrapper label:first-child {
+    width: 100%;
+  }
 }
 .form-field--checkboxes label {
   align-content: center;
-  border-bottom: 0;
-  border: 0;
   display: flex;
   flex: 1 0 auto;
   font-size: 1rem;
-  height: auto;
   justify-content: flex-start;
-  padding: 0.675rem;
+}
+@media screen and (min-width: 40em) {
+  .form-field--checkboxes label {
+    padding: 0.675rem;
+  }
 }
 .form-field--checkboxes label span {
   flex-shrink: 1;
@@ -249,9 +268,10 @@ button:focus, .buttonlike:focus, [type=submit]:focus {
 .form-field--checkboxes input[type=checkbox] {
   height: 15px;
   width: 15px;
+  flex: 0;
+  margin-right: 15px;
 }
 .form-field--checkboxes .checkboxes {
-  display: block;
   flex: 1 1 auto;
 }
 .form-field--checkboxes .checkboxes:hover {
@@ -551,10 +571,14 @@ html, body {
 }
 
 .site-footer__byline {
-  display: flex;
-  justify-content: space-between;
   padding: 15px 5vw;
   font-size: 0.8rem;
+}
+@media screen and (min-width: 40em) {
+  .site-footer__byline {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .site-footer form {
