--- a/src/scss/basics/_typography.scss
+++ b/src/scss/basics/_typography.scss
@@ -18,7 +18,6 @@ h1, h2, h3 {
     line-height: 1.1;
     font-weight: normal;
     margin-top: 0;
-    margin-bottom: 0;
 
     @media screen and (min-width: $tablet-portrait) {
         margin-bottom: 1.35rem;
@@ -73,4 +72,13 @@ time {
 .section-site-intro p:first-of-type {
     font-size: 1.33rem;
     line-height: 1.3;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+
+    &:empty {
+        margin-bottom: 0;
+    }
 }
